# bsr

./: .gitignore  DEFS_03  DEFS_04  README.md
src/: CMakeLists.txt
src/bsr/: CMakeLists.txt
src/bsr/BSR_BMAT4/: CMakeLists.txt
src/bsr/BSR_BREIT/: CMakeLists.txt
src/bsr/BSR_CONF3/: CMakeLists.txt
src/bsr/BSR_DMAT3/: CMakeLists.txt
src/bsr/BSR_DMAT4/: CMakeLists.txt
src/bsr/BSR_HD3/: CMakeLists.txt
src/bsr/BSR_HD3-check/: CMakeLists.txt
src/bsr/BSR_HD4/: CMakeLists.txt
src/bsr/BSR_MAT3/: CMakeLists.txt
src/bsr/BSR_MAT3_MPI/: CMakeLists.txt
src/bsr/BSR_MAT4/: CMakeLists.txt
src/bsr/BSR_MULT/: CMakeLists.txt
src/bsr/BSR_PHOT3/: CMakeLists.txt
src/bsr/BSR_PHOT3_MPI/: CMakeLists.txt
src/bsr/BSR_POL3/: CMakeLists.txt
src/bsr/BSR_PREP3/: CMakeLists.txt
src/bsr/BSR_RECOUP4/: CMakeLists.txt
src/bsr/BSR_UTILS/: CMakeLists.txt  add_farm.f90  add_stgf.f90  add_stgfb.f90  cfile.f90  coef_jj.f90  convert_target.f90  f_values.f90  f_values_jj.f90  genjterm.f90  kma_om.f90  oma_omb.f90  s_values.f90  sec_om.f90  sec_omn.f90  sec_top.f90  sec_top.f90-bk  sec_top_TM.f90  sec_top_TM.f90-orig  sum_hh.f90  sum_hh.f90-funny  sum_hh_jj.f90  tma_tmb.f90  tmb_omb.f90
src/dbsr/: CMakeLists.txt
src/dbsr/DBSR_BREIT3/: CMakeLists.txt
src/dbsr/DBSR_BREIT3_MPI/: CMakeLists.txt
src/dbsr/DBSR_CI3/: CMakeLists.txt
src/dbsr/DBSR_CONF3/: CMakeLists.txt
src/dbsr/DBSR_DMAT3/: CMakeLists.txt
src/dbsr/DBSR_HD3/: CMakeLists.txt
src/dbsr/DBSR_HD3_MPI/: CMakeLists.txt
src/dbsr/DBSR_HF/: CMakeLists.txt  dbsr_lib_dbs.f90  dbsr_lib_zcom.f90  hf_get_spline_param.f90
src/dbsr/DBSR_MAT3_MPI/: CMakeLists.txt  br_conf_jj.f90  sub1.f90  sub1_mpi.f90
src/dbsr/DBSR_MCHF/: CMakeLists.txt
src/dbsr/DBSR_MULT3/: CMakeLists.txt
src/dbsr/DBSR_POL3/: CMakeLists.txt  makefile
src/dbsr/DBSR_PREP3/: CMakeLists.txt
src/dbsr/DBSR_UTILS/: CMakeLists.txt  dbsw_tab.f90
src/dbsr/DBSR_jj2ls/: CMakeLists.txt
src/libs/: CMakeLists.txt  mpi.f90  mpif.h
src/libs/BS/: CMakeLists.txt  Makefile  azl.f90  bcore.f90  bs_cwf.f90  bvalue2.f90  coulom.f90  define_grid.f90  density.f90  dvx.f90  hlm.f90  mk.f90  mk_moments.f90  mkgrid2.f90  mmk_diff.f90  mqk_cell.f90  mrm.f90  nkc.f90  qk.f90  qkc.f90  r_bwfn.f90  read_bsw.f90  rk_moments.f90  spline_atomic.f90  spline_grid.ff  spline_integrals.f90  spline_orbitals.f90  spline_slater.f90  tky.f90  wk_moments.f90  wky.f90  ykf.f90  yval.f90
src/libs/BSR_MPI_LIB/: Makefile  br_bsorb.f90  br_channel.f90  br_conf_LS.f90  br_core.f90  br_core1.f90  br_file.f90  br_grid.f90  br_orb.f90  br_symc_LS.f90  br_symt_LS.f90  br_target.f90
src/libs/DBS/: CMakeLists.txt  DBS_core_energy.f90  DBS_debug.f90  DBS_dhl.f90  DBS_gauss.f90  DBS_integrals.f90  DBS_moments.f90  DBS_mult.f90  DBS_orbitals_pq.f90  bdcwf.f90  convert.f90  convol.ff  mrk_pppp.f90  mrk_pqpq.f90  mrk_qqqq.f90  msk_ppqq.f90  quadr.f90  rk.f90
src/libs/RADIAL/: CMakeLists.txt  Makefile  get_ecore.f90  iwf.f90  mod_radial.f90  rad_list  rk.f90  rw_wfn.f90  zcb.f90
src/libs/SHELLS/: CMakeLists.txt  Makefile  det_d3.f90  det_d6.f90  det_exp.f  det_f4.f90  det_p3.f90  det_sh.f90  detc_d5.f90  detc_d8.f90  detc_p2.f90  detc_sh_LS.f90  gen_f3.f90  zgen.f90
src/libs/ZCOM/: ANG_kappa.f90  ANG_z_3j.f90  ANG_z_9j.f90  ANG_zcklm.f90  CMakeLists.txt  Coulomb_integral_0.f90  E_abc.f90  FUN_alegf.f90  FUN_bessel.f90  FUN_cgamma.f90  FUN_zcoulfg90.f90  FUN_zcoulwf.f90  MOD_det.f90  MOD_dets.f90  MOD_file.f90  MOD_new_defs.f90  MOD_orb_overlaps.f90  MOD_orth.f90  MOD_tm_list.f90  MOD_tmat_list.f90  MOD_zoef.f90  Makefile  SCT_epahse.f90  SCT_kma_om.f90  SCT_pri_mat.f90  SCT_sym_mat.f90  SCT_tma_om.f90  SCT_zrmat.f90  SCT_zsmat.f90  angs_air.f90  anumber.f90  conv_au.f90  det.f90  full_mat.f90  gen_int.f90  ndet_fact.f90  num.f90  read_par.f90  sl_scale.f90  sorting_routines.f90  (+3 more)
src/libs/ZCONFJJ/: Incode_int_jj.f90  Jdef_nc.f90  Jdef_ne.f90  Makefile  cfp_jj.f90  dbsr_lib_zconfjj.f90  kappa.f90  list_all  mod_boef_list.f90  mod_channels_jj.f90  mod_conf_jj.f90  mod_orb_jj.f90  mod_orb_jj.ff  mod_symc.f90  prepare_iort_jj.f90  read_conf_jj.f90  read_core_jj.f90  run_list.bat  skfun.f90  test_cj.ff
src/libs/ZCONFLS/: CMakeLists.txt  MOD_boef.f90  MOD_channels.f90  MOD_channels_dc.f90  MOD_channels_ion.f90  MOD_conf_LS.f90  MOD_orb_LS.f90  MOD_param_LS.f90  MOD_spinorb.f90  MOD_symc.f90  MOD_symt.f90  MOD_target.f90  MOD_target_ion.f90  MOD_termexp.f90  Makefile  det_orbitals.f90  genterm.f90  get_symt_LS.f90  idef_cme.f90  idef_labelc.f90  idef_st.f90  incode_c.f90  incode_int.f90  iort_conf.f90  jopen.f90  prepare_det_expn.f90  r_closd.f90  r_confc.f90  r_term.f90  read_cfgu.f90  sort_terms.f90
src/libs_03/BS/: dinty.f90  grad.f90  hlc.f90  int_de.f90  list_f90  memory_splines.f90  mrk_diff.f90  mtk_diff.f90  mwk_cell.f90  nk_moments.f90  qk_moments.f90  rk.f90  run_extract  spline_grid.f90  spline_moments.f90  vinty.f90  vk.f90  wk.f90  zeta_y.f90
src/libs_03/BSR_MPI_LIB/: CMakeLists.txt  br_dets.f90  br_grid.f90
src/libs_03/DBS/: DBS_nuclear.f90  def_Vnucl.f90  gen_hd.f90  mrk_qpqp.f90  run_list.bat  sk_pq.f90  tvm.f90  update_hs.f90  zbsplvd.f90
src/libs_03/RADIAL/: dzk.f90  grad.f90  grad2.f90  p_deriv.f90  rad_pack.bat  rlshft.f90  tk.f90
src/libs_03/SHELLS/: det_d7.f90  det_d8.f90  det_f11.f90  detc_d3.f90  detc_d4.f90  detc_d6.f90  detc_d7.f90  detc_p4.f90  detc_sh.f90  gen_f7.f90  mod_det_f3.f90  zgen.f90
src/libs_03/ZCOM/: FUN_hwf.f90  FUN_laguerre.f90  FUN_skfun.f90  MOD_atoms_par.f90  MOD_c_data.f90  MOD_dip.f90  MOD_id4.f90  MOD_int_lst.f90  MOD_rk.f90  MOD_tm_LS.f90  MOD_tmat_ion.f90  SCT_time_del.f90  check_det_new.f90  check_file.f90  gauss_LA.f90  inv.f90  list_f90  rrtc.f90  stop_mp.f90  zcom.info  zis.f90
src/libs_03/ZCONFJJ/: CMakeLists.txt  check_conf_jj.f90  dbsr_lib_zconfjj.f90  list_f90  mod_boef_list.f90  mod_channel_jj.f90  mod_channels_jj.f90  mod_orb_jj.f90  mod_symt.f90  read_peel_orb.f90
src/libs_03/ZCONFLS/: MOD_channels_ion.f90  MOD_symc.f90  MOD_target_dc.f90  MOD_terms.f90  SCT_tma_om.f90  get_term_LS.f90  idef_nc.f90  idef_st.f90  iterm_LS.f90  (+4 more)
(+448 files in other folders)
