add_subdirectory(DBSR_BREIT3)
add_subdirectory(DBSR_CI3)
add_subdirectory(DBSR_CONF3)
add_subdirectory(DBSR_DMAT3)
add_subdirectory(DBSR_HD3)
add_subdirectory(DBSR_HF)
add_subdirectory(DBSR_MCHF)
add_subdirectory(DBSR_MULT3)
add_subdirectory(DBSR_POL3)
add_subdirectory(DBSR_PREP3)
add_subdirectory(DBSR_UTILS)
add_subdirectory(DBSR_jj2ls)

if(${MPI_Fortran_FOUND})
  add_subdirectory(DBSR_BREIT3_MPI)
  add_subdirectory(DBSR_HD3_MPI)
  add_subdirectory(DBSR_MAT3_MPI)
endif()
